fixed deprecated call of newInstance